--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -27,24 +27,24 @@
      <section class="head-wrap">
       <section class="wrapper">
       <p><h1>What are Plings?</h1>
-        <p>Contributors to any part of the Opendesktop platform get Plings each time their contribution/product is downloaded. Pling converts download-clicks into monetary value based on the following terms:</p>
+        <p>Contributors to any part of the Opendesktop platform get compensation each time their contribution/product is downloaded. Download-clicks are converted into monetary value based on the following terms:</p>
         <p></p>
-        <p>Each product category is valued by a so-called “Pling-Factor”.</p>
+        <p>Payout = Number of Downloads * Pling-Factor * 1 $-cent,</p>
+        <p></p>
+        <p>where each product category is valued by a so-called “Pling-Factor”.</p>
         <p></p>
         <p>You can see the value of each category in the list below.</p>
         <p></p>
-        <p>Payout = Number of Downloads * Pling-Factor * 1 $-cent</p>
-        <p></p>
-        <p>The payout for a product is limited by the amount of collected Plings. Supporters can increase this limit by plinging your product.</p>
-        <p></p>
         <p>Based on the actual amount of content and downloads, we may adjust these values at any time, even during a month.</p>
+        <p></p>
+        <p>The actual payout for a product is matched against by the amount of so called Plings.</p>
         <p></p>
         <p>You receive Plings by having supporters pling your products. Every received Pling raises the maximum payout limit for that product by 1.00 US-Dollar.</p>
         <p></p>
         <p>Payouts are voluntary and we reserve the right to cancel any single product or payout or all payouts without any reason.</p>
         <p></p>
         <!--<p>We are currently evaluating using Bitcoin as a payout method in the future.-->
-        <p>Products to be pay out require a libre license. Certain products also require a link to the online source repository (see list below), like e.g. cgit.kde.org or github. This is different from just providing the source-code, but to provide an easy setup for collaboration and transparent changes.</p>
+        <p>Any product to be paid out requires a libre license. Certain products also require a link to the online source repository (see list below), like e.g. cgit.kde.org or github. This is different from just providing the source-code, but to provide an easy setup for collaboration and transparent changes.</p>
         <p></p>
         <p>In order to receive any payouts, you need to provide a valid PayPal option under your OpenDesktop account settings.</p>
         <p></p>
