--- a/application/modules/default/views/scripts/plings/index.phtml
+++ b/application/modules/default/views/scripts/plings/index.phtml
@@ -27,7 +27,7 @@
      <section class="head-wrap">
       <section class="wrapper">
       <p><h1>What are Plings?</h1>
-        <p>Contributors to any part of the Opendesktop platform get compensation each time their contribution/product is downloaded. Download-clicks are converted into monetary value based on the following terms:</p>
+        <p>Contributors to any part of the Opendesktop platform get a compensation each time their contribution/product is downloaded. Download-clicks are converted into monetary value based on the following terms:</p>
         <p></p>
         <p>Payout = Number of Downloads * Pling-Factor * 1 $-cent,</p>
         <p></p>
@@ -37,7 +37,7 @@
         <p></p>
         <p>Based on the actual amount of content and downloads, we may adjust these values at any time, even during a month.</p>
         <p></p>
-        <p>The actual payout for a product is matched against by the amount of so called Plings.</p>
+        <p>The actual payout for a product is limited by the amount of Plings.</p>
         <p></p>
         <p>You receive Plings by having supporters pling your products. Every received Pling raises the maximum payout limit for that product by 1.00 US-Dollar.</p>
         <p></p>
