--- a/httpdocs/theme/flatui/less/startpage.less
+++ b/httpdocs/theme/flatui/less/startpage.less
@@ -87,6 +87,7 @@
 		        			-moz-transition: all 0.2s ease-out;
 		        			-ms-transition: all 0.2s ease-out;
 		        			-o-transition: all 0.2s ease-out;
+		        			position: relative;
 		        			figure img{
 		        				width: 100%;
 		        				border: 1px solid #dbdbdb;
@@ -108,13 +109,17 @@
 		        			 	margin: 0;
 		        			 }
 		        			span.small {
-		        				font-size: 13px;
-		        				text-align: right;
-		        				color: #444;
-		        				margin-top: 50px;
-		        				float: right;
-
+		        				font-size: 13px;		        				
+		        				color: #444;		        						        				
+		        				position: absolute;
+		        				bottom: 5px;
+		        				right: 5px;
 		        			}
+		        			 div.projecttitle{
+					            font-size: 11px;					    
+					        }
+		        			
+
 		        		}
 		        	}
 		}
