--- a/application/modules/default/views/scripts/home/partials/plingprojects.phtml
+++ b/application/modules/default/views/scripts/home/partials/plingprojects.phtml
@@ -32,9 +32,14 @@
                             
                             <img class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$p['member_id']?>" src="<?php echo $this->Image($p['profile_image_url'], array('width' => '50', 'height' => '50', 'crop' => 2)); ?>" style="width:40px; height: 40px"/>
                         </figure>
-                        <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($p['username']); ?></h3>                                                   
+                        <h3 class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><?php echo Default_Model_HtmlPurify::purify($p['username']); ?></h3>
+                        <div class="projecttitle"> 
+                                <?= $this->truncate($p['title'], 45) ?>
+                        </div>                                                   
                     </a>
-                     <span class="small"><img src="/images/system/pling-btn-active.png" style="width: 15px; height: 15px"><?= $this->printDate($p['created_at'])?></span>
+                     <span class="small created_at" ><img src="/images/system/pling-btn-active.png" style="width: 15px; height: 15px">
+                        <?= $this->printDate($p['created_at'])?>
+                     </span>
                 </div>
             </div>
     <?php } ?>
