--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2859,6 +2859,63 @@ span.page-views {
           padding-left:5px; 
           padding-right:5px;
       }
+
+      .newusers{
+                  
+                  .u-wrap{
+                    float: left;
+                    width: 100%;
+                    padding: 0.3em;
+                    border: 0.35em solid #dee0e0;
+                    border-radius: 5px;
+                    height: 14em;
+                    margin-bottom: 1em;
+                    background: white;
+                    width: 115px;
+                    height: 200px;
+                    margin-right: 10px;
+                    -webkit-transition: all 0.2s ease-out;
+                    -moz-transition: all 0.2s ease-out;
+                    -ms-transition: all 0.2s ease-out;
+                    -o-transition: all 0.2s ease-out;
+                    position: relative;
+                    figure img{
+                      width: 100%;
+                      border: 1px solid #dbdbdb;
+                      -webkit-border-radius: 999px;
+                      -moz-border-radius: 999px;
+                      border-radius: 999px;
+                      -webkit-background-clip: padding-box;
+                      -moz-background-clip: padding;
+                      background-clip: padding-box;
+
+                    }
+                    h3{
+                      font-size: 13px;
+                      font-weight: bold;
+                      word-wrap: break-word;
+                      line-height: 20px;
+                      height: 20px;
+                      padding: 0;
+                      margin: 0;
+                     }
+                   div.small {
+                      font-size: 13px;                    
+                      color: #444;                                        
+                      position: absolute;
+                      bottom: 5px;
+                      right: 5px;
+                      img.plingactivesmall{
+                        width: 20px;
+                        height:20px;
+                      }
+                      .cntplings{
+                        line-height: 20px;
+                      }
+                    }                    
+
+                  }
+      }
     }
 
     > .head-wrap {
