--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -345,7 +345,7 @@ if ($this->countDownloadsOverall > 0) {
     
 ?>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
-        <p>(**) The Payout-New will not become active until May 2019.</p>
+        <p>(**) The Payout-New will become active on May 2019.</p>
     </div>
     <div id="le-alert"  class="alert alert-warning alert-block" role="alert">
         <p>(*) Info:</p><p>This service will become active on May, 1st 2017. All previous months are shown for internal testing only. </p>
