--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -171,6 +171,9 @@ Google fonts
     }
   }
 
+  .pling-danger{
+         background: #C9302C none repeat scroll 0 0;
+  }
   
 
   .standard-form {
@@ -1816,6 +1819,8 @@ ul.meta-nav-top
           z-index: 100;
           clear: right;
         }
+
+        /*
         div.projectdtailHeart{
             float: right;           
             z-index: 100;
@@ -1889,6 +1894,10 @@ ul.meta-nav-top
           color: #8e44ad;
           
         }
+              // end of heart detail right
+        */
+        
+
       }
     }
 
@@ -2197,6 +2206,60 @@ span.page-views {
           margin: 0 -10px;
         }
     }
+
+
+        div.projectdtailHeart{
+          
+            .container-like{
+                    position: relative;
+                    width: 30px;
+                    height: 30px;
+                    float: left;
+                    .heartproject{
+                      position:relative;
+                      color:#8e44ad; 
+                      font-size: 30px;
+                      display: block;
+                    }
+
+                    .heartgrey{
+                      position:relative;
+                      color:#C8C8C8; 
+                      font-size: 30px;
+                       display: block;
+                     
+                    }
+                    
+
+                    div.heartnumber{
+                      z-index: 3;
+                      position: relative;          
+                      top: -24px;         
+                      display: block;                      
+                      color:#fff;
+                      text-align: center;
+                    }
+                     div.heartnumberpurple{
+                      color: #8e44ad;
+                      
+                    }
+            }
+
+            .container-pling{
+              position: relative;                            
+              .partialbuttonfollowproject{
+                 text-align: center;
+                 width: 45px;
+                 height: 45px;
+              }
+              .partialbuttonplingproject
+              {
+                text-align: center;
+              }
+            }
+        }
+        
+
   }
 
   .prod-widget-box {
@@ -2748,6 +2811,9 @@ span.page-views {
                   color: white;
                   font-size: 12px;
                   padding: 3px 6px;
+              }
+              a.btn.pling-danger{
+                  background-color: #C82333;
               }
             }
           }
