--- a/application/modules/default/views/scripts/user/partials/loopPlings.phtml
+++ b/application/modules/default/views/scripts/user/partials/loopPlings.phtml
@@ -321,7 +321,8 @@ if ($this->countDownloadsOverall > 0) {
 
                 </div>
                 <?php
-                
+                $sum_total_month_score += ($product['num_downloads'] * $product['dl_pling_factor'] / 100) * $product['laplace_score'];
+                $sum_total_payout_score = $currency->toCurrency($sum_total_month_score);
                 if(!$showErrMsg) {       
                     $sum_total_month += $payout_sum;
                     $sum_total_payout = $currency->toCurrency($sum_total_month);
@@ -343,7 +344,21 @@ if ($this->countDownloadsOverall > 0) {
             $sum_total_month_view = number_format($sum_total_month);
             ?>
             <div class='row row-total'>
-                <div class='col-md-9 text-right'><?=$sum_total_text?></div><div class='col-md-1 text-right'><strong style="color: green;"><?=$sum_total_payout?></strong></div><div class='col-md-1 text-right'></div><div class='col-md-1 text-right'><strong style="color: red;"><?=$sum_total_payout_new?></strong></div>
+<?php
+        if(Zend_Auth::getInstance()->hasIdentity() AND Zend_Auth::getInstance()->getIdentity()->roleName == 'admin') {        
+?>                
+                <div class='col-md-8 text-right'><?=$sum_total_text?></div>
+                <div class='col-md-1 text-right'><strong><?=$sum_total_month_score?></strong></div>
+<?php
+        } else {
+?>
+                <div class='col-md-9 text-right'><?=$sum_total_text?></div>
+<?php
+        }
+?>                
+                <div class='col-md-1 text-right'><strong style="color: green;"><?=$sum_total_payout?></strong></div>
+                <div class='col-md-1 text-right'></div>
+                <div class='col-md-1 text-right'><strong style="color: red;"><?=$sum_total_payout_new?></strong></div>
                 
             </div>
             
