--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -1817,7 +1817,9 @@ ul.meta-nav-top
           float: right; 
           width:150px; 
           z-index: 100;
-          clear: right;
+          padding-top: 15px;
+          padding-right: 10px;
+          
         }
 
         /*
