--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -2216,7 +2216,9 @@ span.page-views {
                     position: relative;
                     width: 30px;
                     height: 30px;
-                    float: left;
+                   float: right;
+                    margin-left: 10px;
+
                     .heartproject{
                       position:relative;
                       color:#8e44ad; 
